--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,16 +96,16 @@
   }
 }
 @media screen and (max-width: 450px) {
-  * .parent {
+  .parent {
     height: 200vh;
   }
-  * .parent .blocks {
+  .parent .blocks {
     flex-direction: column;
   }
-  * .parent #sedans_block {
+  .parent .blocks #sedans_block {
     border-radius: 0.5rem 0.5rem 0 0;
   }
-  * .parent #luxury_block {
+  .parent .blocks #luxury_block {
     border-radius: 0 0 0.5rem 0.5rem;
   }
 
