--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,9 +49,10 @@
 * .parent .blocks .son button {
   background-color: #f2f2f2;
   padding: 0.5rem 1rem;
+  margin-top: 2rem;
   border-radius: 1rem;
   font-weight: 600;
-  align-self: center;
+  align-self: start;
   justify-self: end;
   width: 8rem;
 }
@@ -87,15 +88,19 @@
   place-self: center;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   * {
     font-size: 13px;
   }
   * p {
-    padding: 2rem 1rem;
+    padding: 2rem 1rem 0 1rem;
+  }
+
+  button {
+    margin-top: 0;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
   .parent {
     height: 200vh;
   }
